--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@ux-and-i/vue3-styled-components",
-  "version": "0.0.2",
+  "name": "vue3-styled-components",
+  "version": "1.0.0",
   "description": "Visual primitives for the component age. A simple port of styled-components 💅 for Vue",
   "main": "lib/index.js",
   "module": "dist/vue-styled-components.es.js",
