--- a/package.json
+++ b/package.json
@@ -2,90 +2,100 @@
   "name": "vue3-styled-components",
   "version": "1.2.1",
   "description": "Visual primitives for the component age. A simple port of styled-components 💅 for Vue",
-  "main": "lib/index.js",
-  "module": "dist/vue-styled-components.es.js",
-  "author": "Lorenzo Girardi",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/UX-and-I/vue3-styled-components/issues"
-  },
+  "author": "Ofumbi Stephen",
   "scripts": {
     "build": "npm run build:lib && npm run build:dist",
-    "prebuild:lib": "rm -rf lib/*",
-    "build:lib": "babel --out-dir lib src",
-    "prebuild:umd": "rm -rf dist/*",
-    "prebuild:dist": "rm -rf dist/*",
+    "lint": "vue-cli-service lint",
     "build:dist": "rollup -c && rollup -c --environment PRODUCTION",
+    "build:lib": "babel --out-dir lib src",
     "build:watch": "npm run build:lib -- --watch",
-    "test": "mocha \"./src/**/*.test.js\" --require @babel/register --require ./mocha-bootstrap --timeout 5000",
-    "test:watch": "npm run test -- --watch",
-    "lint": "eslint src",
-    "prepublish": "npm run build",
+    "dev": "node example/devServer.js",
     "lint-staged": "lint-staged",
-    "dev": "node example/devServer.js"
+    "prebuild:dist": "rm -rf dist/*",
+    "prebuild:lib": "rm -rf lib/*",
+    "prebuild:umd": "rm -rf dist/*",
+    "prepublish": "npm run build",
+    "test": "mocha \"./src/**/*.test.js\" --require @babel/register --require ./mocha-bootstrap --timeout 5000 -R spec --ui bdd",
+    "test:watch": "npm run test -- --watch"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/UX-and-I/vue3-styled-components.git"
+  "main": "lib/index.js",
+  "module": "dist/vue-styled-components.es.js",
+  "dependencies": {
+    "@babel/runtime": "^7.18.3",
+    "core-js": "^3.8.3",
+    "danger": "^11.0.7",
+    "inline-style-prefixer": "^6.0.1",
+    "lodash.isplainobject": "^4.0.6",
+    "lodash.zipobject": "^4.1.3",
+    "stylis": "^4.1.1",
+    "uninstall": "^0.0.0",
+    "vue": "^3.2.36"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.17.10",
+    "@babel/core": "^7.18.2",
+    "@babel/eslint-parser": "^7.18.2",
+    "@babel/plugin-external-helpers": "^7.17.12",
+    "@babel/plugin-proposal-class-properties": "^7.17.12",
+    "@babel/plugin-proposal-object-rest-spread": "^7.18.0",
+    "@babel/plugin-transform-runtime": "^7.18.2",
+    "@babel/preset-env": "^7.18.2",
+    "@babel/register": "^7.17.7",
+    "@rollup/plugin-alias": "^3.1.2",
+    "@rollup/plugin-babel": "^5.3.0",
+    "@rollup/plugin-commonjs": "^14.0.0",
+    "@rollup/plugin-inject": "^4.0.4",
+    "@rollup/plugin-json": "^4.1.0",
+    "@rollup/plugin-node-resolve": "^9.0.0",
+    "@rollup/plugin-replace": "^2.4.2",
+    "@styled-system/css": "^5.1.5",
+    "@vue/cli-plugin-babel": "~5.0.0",
+    "@vue/cli-plugin-eslint": "~5.0.0",
+    "@vue/cli-service": "~5.0.0",
+    "@vue/test-utils": "^2.0.0-rc.18",
+    "babel-loader": "^8.2.5",
+    "babel-plugin-add-module-exports": "^1.0.4",
+    "chai": "^4.3.6",
+    "chokidar": "^3.5.3",
+    "eslint": "^8.17.0",
+    "eslint-plugin-html": "^6.2.0",
+    "eslint-plugin-vue": "^9.1.0",
+    "expect": "^28.1.0",
+    "express": "^4.18.1",
+    "jsdom": "^19.0.0",
+    "jsdom-global": "^3.0.2",
+    "lint-staged": "^13.0.0",
+    "lodash": "^4.17.21",
+    "mocha": "^10.0.0",
+    "node-watch": "^0.7.3",
+    "pre-commit": "^1.2.2",
+    "rollup": "^2.52.8",
+    "rollup-plugin-polyfill-node": "^0.9.0",
+    "rollup-plugin-postcss": "^4.0.0",
+    "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-visualizer": "^5.6.0",
+    "rollup-plugin-vue": "^6.0.0",
+    "semantic-release": "^19.0.2",
+    "semantic-release-gitmoji": "^1.4.4"
+  },
+  "bugs": {
+    "url": "https://github.com/UX-and-I/vue3-styled-components/issues"
   },
   "keywords": [
     "vue",
     "css",
     "css-in-js"
   ],
-  "dependencies": {
-    "glamor": "^2.20.40",
-    "inline-style-prefixer": "^6.0.0",
-    "lodash.isplainobject": "^4.0.6",
-    "lodash.zipobject": "^4.1.3",
-    "stylis": "^3.5.4"
-  },
-  "devDependencies": {
-    "@babel/cli": "^7.8.4",
-    "@babel/core": "^7.9.0",
-    "@babel/plugin-external-helpers": "^7.8.3",
-    "@babel/plugin-proposal-class-properties": "^7.8.3",
-    "@babel/plugin-proposal-object-rest-spread": "^7.9.5",
-    "@babel/preset-env": "^7.9.5",
-    "@babel/register": "^7.9.0",
-    "babel-eslint": "^10.1.0",
-    "babel-loader": "^8.1.0",
-    "babel-plugin-add-module-exports": "^1.0.2",
-    "chai": "^4.2.0",
-    "chokidar": "^3.3.1",
-    "danger": "^10.1.1",
-    "eslint": "^6.8.0",
-    "eslint-config-vue": "^2.0.2",
-    "eslint-plugin-html": "^6.0.2",
-    "eslint-plugin-vue": "^6.2.2",
-    "expect": "^25.4.0",
-    "express": "^4.17.1",
-    "jsdom": "^16.2.2",
-    "jsdom-global": "^3.0.2",
-    "lint-staged": "^10.1.7",
-    "lodash": "^4.17.15",
-    "mocha": "^7.1.1",
-    "node-watch": "^0.6.3",
-    "pre-commit": "^1.2.2",
-    "rollup": "^2.7.1",
-    "rollup-plugin-babel": "^4.4.0",
-    "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-inject": "^3.0.2",
-    "rollup-plugin-json": "^4.0.0",
-    "rollup-plugin-node-builtins": "^2.1.2",
-    "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-replace": "^2.2.0",
-    "rollup-plugin-terser": "^5.3.0",
-    "rollup-plugin-visualizer": "^4.0.4",
-    "rollup-plugin-vue2": "^0.8.1",
-    "vue": "^3.0.0"
-  },
+  "license": "MIT",
   "lint-staged": {
     "*.js": [
-      "eslint --fix",
-      "git add"
+      "eslint --fix"
     ]
   },
   "pre-commit": "lint-staged",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/UX-and-I/vue3-styled-components.git"
+  },
   "types": "index.d.ts"
 }
