--- a/package.json
+++ b/package.json
@@ -58,7 +58,11 @@
     "chai": "^4.3.6",
     "chokidar": "^3.5.3",
     "eslint": "^8.17.0",
+    "eslint-config-standard": "^17.0.0",
     "eslint-plugin-html": "^6.2.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-n": "^15.2.1",
+    "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-vue": "^9.1.0",
     "expect": "^28.1.0",
     "express": "^4.18.1",
@@ -89,10 +93,9 @@
   "license": "MIT",
   "lint-staged": {
     "*.js": [
-      "eslint --fix"
+      "npx eslint --fix"
     ]
   },
-  "pre-commit": "lint-staged",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/UX-and-I/vue3-styled-components.git"
