--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue3-styled-components",
+  "name": "vue3-styled-component",
   "version": "1.2.1",
   "description": "Visual primitives for the component age. A simple port of styled-components 💅 for Vue",
   "author": "Ofumbi Stephen",
