--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,7 +18,6 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 16
-          registry-url: https://registry.npmjs.org/
       - name: Install jq yq
         run: |
           sudo wget https://github.com/stedolan/jq/releases/download/jq-1.6/jq-linux64 -O /usr/bin/jq &&\
@@ -33,13 +32,20 @@ jobs:
         working-directory: ./gitmoji-semver
         run: |
           make scaffold F=../.semver.yml O=..
-      - name: Release
+      - name: Test
         working-directory: ./.release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          NODE_AUTH_TOKEN: ${{secrets.NPM_SECRET}}
         run: |
           npm ci
           npx semantic-release
-          npm publish
+          npm run build --if-present
+          npm test
+      - name: Publish
+        run: |
+          npm config set //registry.npmjs.org/:_authToken ${NPM_TOKEN}
+          npm publish --ignore-scripts
+        env:
+          NPM_TOKEN: ${{ secrets.NPM_SECRET }}
           
+      
